# Card-Games

./: .gitignore  500-plan.md  README.md  docker-compose.yml  index.html
#Doc/: Lobby.md  Planning-poker.md
7game/: DockerFile  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
7server/: Battle.js  Battle31.js  Battle7.js  Dockerfile  Lobby.js  index.js  package-lock.json  package.json
client/: Dockerfile  index.html  package-lock.json  (+1 more)
server-rust/: Cargo.toml
server-rust/.cargo/: config.toml
server-rust/src/: lib.rs  main.rs  socket_router.rs  state.rs
server-rust/src/helpers/: mod.rs  point_counter.rs
server-rust/src/models/: game_7_logic.rs  game_logic.rs  lobby.rs  mod.rs  player.rs  player_7_data.rs  player_game_data.rs  players.rs  turn_manager.rs
server-rust/src/objects/: game_data.rs  game_logic.rs  lobby.rs  lobby_logic.rs  mod.rs  player.rs  player_game_data.rs  players.rs  states.rs  turn_manager.rs
server-rust/src/objects/game7/: game_7_logic.rs  mod.rs  player_7_data.rs
server-rust/src/responses/: emit_traits.rs  lobby_response.rs  mod.rs  player_response.rs  responses.rs  responses_enum.rs  seven_response.rs
server-rust/src/responsesOLD/: emit_traits.rs  lobby_response.rs  seven_response.rs  turn_response.rs
server-rust/src/socket/: disconnect_socket.rs  game_7_socket.rs  lobby_socket.rs  mod.rs  send_error_socket.rs  start_game_socket.rs
server-rust/tests/: socket.rs  unit.rs
server-rust/tests/socket/: disconnect_test.rs  lobby_test.rs  mocks.rs  start_game_test.rs
server-rust/tests/unit/: seven_game.rs
(+94 files in other folders)
